// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LovableFilterableTable user enters search query should filter items 1`] = `
Array [
  "Bitcoin",
  "Bitcoin Cash",
  "Litecoin",
  "Binance Coin",
  "Bytecoin",
]
`;

exports[`LovableFilterableTable when given empty \`items\` should render an empty table 1`] = `
<div
  className="LovableFilterableTable"
>
  <div
    className="row"
  >
    <table>
      <thead>
        <tr>
          <td>
            <label
              htmlFor="filterField"
            >
              Filter
            </label>
            <input
              id="filterField"
              onChange={[Function]}
              placeholder="Filter..."
              style={
                Object {
                  "minWidth": "300px",
                }
              }
              type="text"
              value=""
            />
          </td>
        </tr>
        <tr>
          <th>
            Name
          </th>
          <th>
            Symbol
          </th>
          <th>
            Price ($)
          </th>
          <th>
            % Change (1h)
          </th>
          <th>
            % Change (24h)
          </th>
          <th>
            % Change (7d)
          </th>
          <th />
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`LovableFilterableTable when given some \`items\` should render each item in the table 1`] = `
<div
  className="LovableFilterableTable"
>
  <div
    className="row"
  >
    <table>
      <thead>
        <tr>
          <td>
            <label
              htmlFor="filterField"
            >
              Filter
            </label>
            <input
              id="filterField"
              onChange={[Function]}
              placeholder="Filter..."
              style={
                Object {
                  "minWidth": "300px",
                }
              }
              type="text"
              value=""
            />
          </td>
        </tr>
        <tr>
          <th>
            Name
          </th>
          <th>
            Symbol
          </th>
          <th>
            Price ($)
          </th>
          <th>
            % Change (1h)
          </th>
          <th>
            % Change (24h)
          </th>
          <th>
            % Change (7d)
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <tr
          style={Object {}}
        >
          <td
            className="item-name"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            Bitcoin
          </td>
          <td
            className="item-symbol"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            BTC
          </td>
          <td
            className="item-price_usd"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            4069.35
          </td>
          <td
            className="item-percent_change_1h"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            -0.21
          </td>
          <td
            className="item-percent_change_24h"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            -1.09
          </td>
          <td
            className="item-percent_change_7d"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            -3.36
          </td>
          <td
            className="item-heart"
          >
            <i
              aria-hidden="true"
              className="fa fa-heart-o"
              onClick={[Function]}
            />
          </td>
        </tr>
        <tr
          style={Object {}}
        >
          <td
            className="item-name"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            Ethereum
          </td>
          <td
            className="item-symbol"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            ETH
          </td>
          <td
            className="item-price_usd"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            331.763
          </td>
          <td
            className="item-percent_change_1h"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            0.67
          </td>
          <td
            className="item-percent_change_24h"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            11.94
          </td>
          <td
            className="item-percent_change_7d"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            10.16
          </td>
          <td
            className="item-heart"
          >
            <i
              aria-hidden="true"
              className="fa fa-heart-o"
              onClick={[Function]}
            />
          </td>
        </tr>
        <tr
          style={Object {}}
        >
          <td
            className="item-name"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            Bitcoin Cash
          </td>
          <td
            className="item-symbol"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            BCH
          </td>
          <td
            className="item-price_usd"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            619.897
          </td>
          <td
            className="item-percent_change_1h"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            -4.33
          </td>
          <td
            className="item-percent_change_24h"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            -20.3
          </td>
          <td
            className="item-percent_change_7d"
            style={
              Object {
                "padding": "5px",
              }
            }
          >
            104.19
          </td>
          <td
            className="item-heart"
          >
            <i
              aria-hidden="true"
              className="fa fa-heart-o"
              onClick={[Function]}
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
